<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateProfileActivity">

    <TextView android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_create_profile_label"
        android:textSize="@dimen/heading_22sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        android:paddingBottom="70dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/lablePickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_pic_instruction"
                android:textSize="@dimen/medium_16sp"
                android:layout_marginTop="@dimen/margin_05dp"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:paddingEnd="@dimen/margin_20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/gray_mid"/>

            <include
                android:id="@+id/imagePickerCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/profile_pic_layout_row"
                app:layout_constraintTop_toBottomOf="@id/lablePickImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:id="@+id/inputFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_15dp"
        android:maxLength="50"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePickerCard"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:hint="@string/profile_first_name_label"
        android:textColorHint="@color/gray_mid"
        android:background="@drawable/input_text_bg"
        />

    <EditText android:id="@+id/inputLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_15dp"
        android:maxLength="50"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_16sp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:hint="@string/profile_last_name_label"
        android:textColorHint="@color/gray_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:background="@drawable/input_text_bg"
        app:layout_constraintTop_toBottomOf="@id/inputFirstName"
        />

    <EditText android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_15dp"
        android:maxLength="80"
        android:textColor="@color/black"
        android:hint="@string/profile_last_email_label"
        android:textColorHint="@color/gray_mid"
        android:textSize="@dimen/medium_16sp"
        android:layout_marginTop="@dimen/margin_25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_05dp"
        android:background="@drawable/input_text_bg"
        app:layout_constraintTop_toBottomOf="@id/inputLastName"
        />

        <TextView android:id="@+id/errorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

        <EditText android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/margin_15dp"
            android:maxLength="50"
            android:textColor="@color/black"
            android:hint="@string/profile_password_label"
            android:textColorHint="@color/gray_mid"
            android:inputType="textPassword"
            android:textSize="@dimen/medium_16sp"
            android:layout_marginTop="@dimen/margin_05dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_05dp"
            android:background="@drawable/input_text_bg"
            app:layout_constraintTop_toBottomOf="@id/errorEmail"
            />
        <TextView android:id="@+id/errorPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_password_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

        <EditText android:id="@+id/inputWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/margin_15dp"
            android:maxLength="50"
            android:textColor="@color/black"
            android:hint="@string/profile_website_label"
            android:textColorHint="@color/gray_mid"
            android:textSize="@dimen/medium_16sp"
            android:layout_marginTop="@dimen/margin_05dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:background="@drawable/input_text_bg"
            app:layout_constraintTop_toBottomOf="@id/errorPassword"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile_common_label_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_16sp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"
            app:layout_constraintTop_toBottomOf="@id/inputWebsite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar_cyclic"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:SpinKit_Color="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>